feat(untrustedtext): carry untrusted text in a type, not by accessor name (#58)
* openspec: update type-untrusted-text after review

* implement type-untrusted-text

* fix(sandbox): stop GuardDenialReads' monitor from spanning the docker logs read

Three-phase read() per lock-scope.md: decide the window locked, run `docker logs` unlocked, apply the result locked — cursor()/sourceRecreated() no longer wait behind an in-flight read (bounded by factory.docker-command-timeout, 5 min default)

* refactoring after review

* refactoring after review

* docs: state supported platforms in README

Windows is WSL2-only; record the POSIX assumptions behind that so the question is not re-opened.

* docs(sandbox): record the Gitea fixture as the declared-volume exemption

The Testcontainers E2E fixtures bypass DeclaredVolumeOverrides; the reaper removes their anonymous volumes with the container, so the mechanism's invariant holds. Noted at both ends per implementation.md's old-way sweep.

* refactoring after review

* docs(openspec): sync type-untrusted-text specs and archive the change

Adds the untrusted-text capability spec and folds the typed-carrier rules into factory-logging, verification-hardening and plugin-api-contract.

Change: type-untrusted-text